[metadata]
name = sumt
version = 2.5.1
author = Anders Gorm Pedersen
author_email = agpe@dtu.dk
description = Computes consensus trees and other phylogenetic tree summaries
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/agormp/sumt
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: OS Independent

[options]
py_modules = sumt
python_requires = >=3.6
install_requires =
	phylotreelib >= 1.7.0
	psutil

[options.entry_points]
console_scripts =
    sumt = sumt:main
